<resources>
    <string name="app_name">weatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search"> search </string>
    <string name="city">TextView</string>
    <string name="time">time</string>
    <string name="citystate">cityState</string>
    <string name="temp">temp</string>
    <string name="temp_max">temp_max</string>
    <string name="temp_min">temp_min</string>
    <string name="humidity">humidity</string>
    <string name="pression">pressure</string>
    <string name="city1">City</string>
    <string name="error">TextView</string>
</resources>
